--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,4 +1,5 @@
-.line{
+/* General styles */
+.line {
     color: #000;
     font-family: Mirador;
     font-size: 40px;
@@ -10,8 +11,7 @@
     letter-spacing: 0.8px;
 }
 
-
-.second-line{
+.second-line {
     color: #60BDBB;
     font-family: "TT Chocolates Trl";
     font-size: 20px;
@@ -22,19 +22,30 @@
     letter-spacing: 0.8px;
 }
 
-.swiming-div {
-    position: relative; 
-    background-image: url('../assets/swiming.png');
+.container {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+/* Container styles */
+.swiming-div,
+.Taekwondo-div,
+.horse-div
+ {
+    position: relative;
     background-size: cover;
     background-position: center;
     width: 563px;
-  
     height: 300px;
     border-radius: 15px;
     overflow: hidden;
 }
-.swiming-div::after {
-    content: ''; 
+
+.swiming-div::after,
+.Taekwondo-div::after,
+.horse-div::after 
+{
+    content: '';
     position: absolute;
     top: 0;
     left: 0;
@@ -43,18 +54,41 @@
     background-color: rgba(0, 0, 0, 0.50);
     z-index: 1;
 }
-.swiming-p {
+
+/* Specific container styles */
+.swiming-div {
+    background-image: url('../assets/swiming.png');
+}
+
+.Taekwondo-div {
+    background-image: url('../assets/Taekwondo.svg');
+      margin-bottom: 20px;
+}
+
+.horse-div {
+    background-image: url('../assets/horse.png');
+}
+
+/* Text styles */
+.swiming-p,
+.Taekwondo-p,
+.horse-p {
     font-family: "TT Chocolates Trl";
     font-size: 40px;
     font-weight: 600;
     line-height: 48px;
     letter-spacing: 0.02em;
     text-align: left;
-    color: #ffff !important;
-    margin-bottom: 11rem; 
+    color: #fff;
+    width: 80%;
+      margin-left: 2rem;
+    margin-bottom: 7rem;
 }
 
-.swiming-span {
+.swiming-span,
+.Taekwondo-span,
+.horse-span {
+    margin-left: 3rem;
     font-family: "TT Chocolates Trl";
     font-size: 17px;
     font-weight: 600;
@@ -62,32 +96,28 @@
     letter-spacing: 0.02em;
     text-align: left;
     color: #E1E1E1;
+}
+
+
+.see{
+     width: 25%;
+      display: flex;
+       cursor: pointer;
+    border-radius: 34.5px;
+      border:2.5px solid #DBC79F;
+}
+
+.see img{
+    margin-left:  10rem;
+}
+
+.see p{
+    color: #5E5E5E;
+margin-left: 9px;
+    font-family: "TT Chocolates Trl";
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
    
 }
-.container{
-     display: flex;
-     justify-content: space-evenly;
-}
-
-.Taekwondo-div {
-    position: relative; 
-    background-image: url('../assets/Taekwondo.svg');
-    background-size: cover;
-    background-position: center;
-    width: 563px;
-  
-    height: 300px;
-    border-radius: 15px;
-    overflow: hidden;
-}
-.swiming-div::after {
-    content: ''; 
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.50);
-    z-index: 1;
-}
-
