--- a/src/component/styles/feedback.css
+++ b/src/component/styles/feedback.css
@@ -64,4 +64,33 @@
   .phone {
     max-width: 100%;
   }
-  
+  @media (max-width: 400px) {
+    .contentLeft {
+      padding-right: 20px;
+      padding-left: 20px;
+    }
+    
+    .title {
+      font-size: 40px;
+    }
+    
+    .parent {
+      font-size: 40px;
+    }
+    
+    .divider {
+      width: 90%;
+    }
+    
+    .description {
+      font-size: 14px;
+      margin-top: 10px;
+    }
+    
+    .contentRight {
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+    }
+  }
