--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -121,3 +121,86 @@ margin-left: 9px;
     line-height: normal;
    
 }
+
+
+@media screen and (max-width: 600px) {
+    /* General styles */
+    .line {
+        font-size: 16px;
+        margin-left: 5px;
+    }
+  
+    .second-line {
+        font-size: 10px;
+        margin-left: 5px;
+    }
+  
+    .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+  
+    /* Container styles */
+    .swiming-div,
+    .Taekwondo-div,
+    .horse-div {
+        width: 100%;
+        height: 120px;
+        border-radius: 8px;
+        overflow: hidden;
+        margin-bottom: 10px;
+    }
+  
+    .swiming-div::after,
+    .Taekwondo-div::after,
+    .horse-div::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.50);
+        z-index: 1;
+    }
+  
+    /* Text styles */
+    .swiming-p,
+    .Taekwondo-p,
+    .horse-p {
+        font-size: 16px;
+        line-height: 20px;
+        margin-left: 0.5rem;
+        margin-bottom: 1rem;
+    }
+  
+    .swiming-span,
+    .Taekwondo-span,
+    .horse-span {
+        margin-left: 0.5rem;
+        font-size: 10px;
+    }
+  
+    .see {
+        width: 80%;
+        display: flex;
+        cursor: pointer;
+        border-radius: 17px;
+        border: 1px solid #DBC79F;
+        padding: 0.5rem;
+        justify-content: center;
+        align-items: center;
+    }
+  
+    .see img {
+        margin-left: 0.5rem;
+    }
+  
+    .see p {
+        color: #5E5E5E;
+        margin-left: 0.5rem;
+        font-size: 12px;
+    }
+  }
+  
